--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,24 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Warning"
+      "Default": "Debug",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "HealthChecksUI": {
-    "HealthChecks": [
-      {
-        "Name": "Workout App DB Check",
-        "Uri": "http://localhost:5002/health/db"
-      },
-      {
-        "Name": "GQL",
-        "Uri": "http://localhost:5000/health/gql"
-      }
-    ],
-    "Webhooks": [],
-    "EvaluationTimeInSeconds": 10,
-    "MinimumSecondsBetweenFailureNotifications": 60
   }
 }
