--- a/ApplicationHealthChecker/ApplicationHealthChecker.csproj
+++ b/ApplicationHealthChecker/ApplicationHealthChecker.csproj
@@ -14,6 +14,8 @@
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="3.1.0"/>
+    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="3.1.3"/>
+    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="3.1.2"/>
+    <PackageReference Include="AspNetCore.HealthChecks.UI.SQLite.Storage" Version="3.1.2"/>
   </ItemGroup>
 </Project>
