chore: update to .net 5

--- a/ApplicationHealthChecker/appsettings.json
+++ b/ApplicationHealthChecker/appsettings.json
@@ -13,7 +13,7 @@
   "HealthChecksUI": {
     "HealthChecks": [
       {
-        "Name": "Workout App DB Check",
+        "Name": "Workout App",
         "Uri": "https://rwherber.com/api/workout-app/v1/health/db"
       },
       {
@@ -23,10 +23,14 @@
       {
         "Name": "Money Manager Service",
         "Uri": "https://rherber-money-manager-service.azurewebsites.net/health"
+      },
+      {
+        "Name": "WoW Market Watcher API",
+        "Uri": "https://rwherber.com/wow-market-watcher/v1/health"
       }
     ],
     "Webhooks": [],
-    "EvaluationTimeInSeconds": 10,
+    "EvaluationTimeInSeconds": 60,
     "MinimumSecondsBetweenFailureNotifications": 60
   }
 }
