chore: add azure endpoint

--- a/ApplicationHealthChecker/appsettings.json
+++ b/ApplicationHealthChecker/appsettings.json
@@ -17,7 +17,7 @@
         "Uri": "https://rwherber.com/api/workout-app/v1/health/db"
       },
       {
-        "Name": "GQL",
+        "Name": "Workout App GQL",
         "Uri": "http://localhost:5000/health/gql"
       },
       {
@@ -25,8 +25,12 @@
         "Uri": "https://rherber-money-manager-service.azurewebsites.net/health"
       },
       {
-        "Name": "WoW Market Watcher API",
+        "Name": "WoW Market Watcher API (Digital Ocean)",
         "Uri": "https://rwherber.com/wow-market-watcher/v1/health"
+      },
+      {
+        "Name": "WoW Market Watcher API (Azure)",
+        "Uri": "https://rherber-wow-market-watcher-uw-wa-d.azurewebsites.net/health"
       }
     ],
     "Webhooks": [],
