--- a/.editorconfig
+++ b/.editorconfig
@@ -207,4 +207,42 @@ dotnet_naming_style.begins_with_i.capitalization = pascal_case
 
 # Disables
 
+# Convert anonymous type to tuple.
+# Disabled because anonymous types are needed for composite keys.
 dotnet_diagnostic.IDE0050.severity = none
+# Do not directly await a Task.
+# Disabed due to configure await is not needed for .NET Core/.NET 5+ and having ConfigureAwait() everywhere is ugly.
+dotnet_diagnostic.CA2007.severity = none
+# Collection properties should be read only.
+# Disabled as Pocos with initializers are used.
+dotnet_diagnostic.CA2227.severity = none
+# Do not catch general exception types.
+# Disabled because I want to catch general exceptions.
+dotnet_diagnostic.CA1031.severity = none
+# Do not expose generic lists.
+# Disabled because I disagree with this.
+dotnet_diagnostic.CA1002.severity = none
+# Review SQL queries for security vulnerabilities.
+# Disabled because EF core is used for all user input queries. The only non-ef core query is create db if not exists which does not take in user input.
+dotnet_diagnostic.CA2100.severity = none
+# Specify StringComparison for clarity.
+# Disabled because using String comparison with MySQL ef core provider breaks ef core.
+dotnet_diagnostic.CA1307.severity = none
+# URI return values should not be strings.
+# Disabled because it thinks having url in function name should raise this.
+dotnet_diagnostic.CA1055.severity = none
+# Do not use insecure randomness.
+# Disabled because I don't need secure randomness.
+dotnet_diagnostic.CA5394.severity = none
+# Avoid uninstantiated internal classes.
+# Disabled as many internal classes are created through reflection.
+dotnet_diagnostic.CA1812.severity = none
+# High-performance logging with LoggerMessage in ASP.NET Core.
+# Disabled because I don't want to refactor logging right now.
+dotnet_diagnostic.CA1848.severity = none
+# Do not disable token validation checks.
+# Disabled because we still validate JWT for refresh tokens but without lifetime validation.
+dotnet_diagnostic.CA5404.severity = none
+# Something about logging templates?
+# Disabled because I don't know what it is talking about.
+dotnet_diagnostic.CA2254.severity = none
