--- a/ApplicationHealthChecker/ApplicationHealthChecker.csproj
+++ b/ApplicationHealthChecker/ApplicationHealthChecker.csproj
@@ -1,15 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>ApplicationHealthChecker</RootNamespace>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
     <Nullable>enable</Nullable>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <Product>ApplicationHealthChecker</Product>
+    <Authors>Robert Herber</Authors>
+    <Company>Robert Herber</Company>
+    <Description>Does health checks and stuff.</Description>
+    <Copyright>Copyright (c) 2022 Robert Herber. All rights reserved.</Copyright>
+    <Version>1.1.0</Version>
+    <PackageReleaseNotes>
+        1.0.0 - Initial Release.
+        1.1.0 - Upgrade to .NET 6. 
+    </PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="5.0.1" />
-    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="5.0.1" />
-    <PackageReference Include="AspNetCore.HealthChecks.UI.SQLite.Storage" Version="5.0.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="6.0.5" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.5" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.SQLite.Storage" Version="6.0.5" />
   </ItemGroup>
 </Project>
